# cppnb

./: CMakeLists.txt  README.md  cppnb  imgui.ini  main.cpp
src/ui/: code_cell.cpp  code_cell.hpp  markdown_cell.cpp  notebook.cpp  notebook.hpp
src/utils/: logger.cpp
